@@ -2,6 +2,15 @@
 
 	Patch from Tambet Ingo <tambet@gmail.com>
 
+	* src/applet-device-gsm.c
+	  src/connection-editor/nm-connection-list.c
+	  src/connection-editor/page-mobile.c
+		- Use gsm setting accessors
+
+2008-10-26  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Tambet Ingo <tambet@gmail.com>
+
 	* src/applet-device-cdma.c
 	  src/connection-editor/nm-connection-list.c
 	  src/connection-editor/page-mobile.c
